--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header-top">
         <div class="logo">
-          <a href="#"><img src="" width="" height="" alt=""></a>
+          <a href="index.html"><img src="img/Logo.svg" width="154" height="64" alt=""></a>
         </div>
         <nav class="main-navigation">
           <ul>
@@ -70,50 +70,50 @@
           <input type="radio" name="fatcontent" value="before30%"> cвыше 30%
         </label>
       </div>
-        <label>Наполнители:</label>
-        <label for="fillers-chocolates">
-          <input type="checkbox" name="chocolates" id="fillers-chocolates" checked> шоколадные
-        </label>
-        <label for="fillers-sugartopping">
-          <input type="checkbox" name="sugartopping" id="fillers-sugartopping" checked> сахарные присыпки
-        </label>
-        <label for="fillers-fruit">
-          <input type="checkbox" name="fruit" id="fillers-fruit"> фрукты
-        </label>
-        <label for="fillers-syrups">
-          <input type="checkbox" name="syrups" id="fillers-syrups"> сироп
-        </label>
-        <label for="fillers-jams">
-          <input type="checkbox" name="jams" id="fillers-jams"> джем
-        </label>
+      <label>Наполнители:</label>
+      <label for="fillers-chocolates">
+        <input type="checkbox" name="chocolates" id="fillers-chocolates" checked> шоколадные
+      </label>
+      <label for="fillers-sugartopping">
+        <input type="checkbox" name="sugartopping" id="fillers-sugartopping" checked> сахарные присыпки
+      </label>
+      <label for="fillers-fruit">
+        <input type="checkbox" name="fruit" id="fillers-fruit"> фрукты
+      </label>
+      <label for="fillers-syrups">
+        <input type="checkbox" name="syrups" id="fillers-syrups"> сироп
+      </label>
+      <label for="fillers-jams">
+        <input type="checkbox" name="jams" id="fillers-jams"> джем
+      </label>
       <input type="submit" value="Применить">
     </form>
     <div class="products-catalog price-catalog">
-        <img src="" width="" height="" alt=""> 310 Р/кг
-        <a href="#"> Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-        <img src="" width="" height="" alt=""> 380 Р/кг
-        <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-        <img src="" width="" height="" alt=""> 355 Р/кг
-        <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-        <img src="" width="" height="" alt=""> 415 Р/кг
-        <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-        <img src="" width="" height="" alt=""> 325 Р/кг
-        <a href="#">Сливочное с брусничным джемом</a>
-        <img src="" width="" height="" alt=""> 410 Р/кг
-        <a href="#">Сливочно-черничное с цельными ягодами черники</a>
-        <img src="" width="" height="" alt=""> 375 Р/кг
-        <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
-        <img src="" width="" height="" alt=""> 320 Р/кг
-        <a href="#">Сливочное с шоколадной стружкой </a>
-        <img src="" width="" height="" alt=""> 440 Р/кг
-        <a href="#">Сливочно-ванильное с кусочками шоколада</a>
-        <img src="" width="" height="" alt=""> 435 Р/кг
-        <a href="#">Сливочное с ментоловым сиропом</a>
-        <img src="" width="" height="" alt=""> 355 Р/кг
-        <a href="#">Сливочное с кусочками черного шоколада</a>
-        <img src="" width="" height="" alt=""> 420 Р/кг
-        <a href="#">Сливочное с мятными сиропом</a>
-      </div>
+      <img src="img/1.png" width="200" height="200" alt=""> 310 Р/кг
+      <a href="#"> Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+      <img src="img/2.png" width="200" height="200" alt=""> 380 Р/кг
+      <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+      <img src="img/3.png" width="200" height="200" alt=""> 355 Р/кг
+      <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+      <img src="img/4.png" width="200" height="200" alt=""> 415 Р/кг
+      <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+      <img src="img/5.png" width="200" height="200" alt=""> 325 Р/кг
+      <a href="#">Сливочное с брусничным джемом</a>
+      <img src="img/6.png" width="200" height="200" alt=""> 410 Р/кг
+      <a href="#">Сливочно-черничное с цельными ягодами черники</a>
+      <img src="img/7.png" width="200" height="200" alt=""> 375 Р/кг
+      <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
+      <img src="img/8.png" width="200" height="200" alt=""> 320 Р/кг
+      <a href="#">Сливочное с шоколадной стружкой </a>
+      <img src="img/9.png" width="200" height="200" alt=""> 440 Р/кг
+      <a href="#">Сливочно-ванильное с кусочками шоколада</a>
+      <img src="img/10.png" width="200" height="200" alt=""> 435 Р/кг
+      <a href="#">Сливочное с ментоловым сиропом</a>
+      <img src="img/11.png" width="200" height="200" alt=""> 355 Р/кг
+      <a href="#">Сливочное с кусочками черного шоколада</a>
+      <img src="img/12.png" width="200" height="200" alt=""> 420 Р/кг
+      <a href="#">Сливочное с мятными сиропом</a>
+    </div>
     <div class="paginator">
       <a class="prev" href="#prev">Назад</a>
       <a href="#1">1</a>
@@ -139,10 +139,10 @@
         <a href="#" class="">Экологические стандарты</a>
       </div>
       <div class="footer-logo">
-        <a href="#"><img src="" width="" height="" alt=""></a>
+        <a href="#"><img src="img/logo2.svg" width="108" height="37" alt=""></a>
       </div>
       <div class="footer-copyright">
-        Сделано в HTML Academy © 2016
+        Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
       </div>
     </div>
   </footer>
