--- a/catalog.html
+++ b/catalog.html
@@ -47,72 +47,108 @@
       <label>Сортировка:</label>
       <select name="sorting">
         <option value="bypopularity">По пулярности</option>
-        <option value="inascendingprices">По возрастанию цены</option>
-        <option value="descendinglyprices"> По убыванию цены</option>
+        <option value="inascendingprices">Сначала недорогие</option>
+        <option value="descendinglyprices">Сначала дорогие</option>
       </select>
       <div class="half-width">
         <label for="rangeofprices">Цена:</label>
         100
         <input type="range" min="100" max="500" step="10" id="rangeofprices">500
       </div>
-      <div class="radiobutton">
+      <div class="radiobuttons">
         <label>Жирность:</label>
         <label>
-          <input type="radio" name="fatcontent" value="0%"> 0%
+          <input type="radio" name="fatcontent" value="0%">0%
         </label>
         <label>
-          <input type="radio" name="fatcontent" value="before10%" checked> до 10%
+          <input type="radio" name="fatcontent" value="before10%" checked>до 10%
         </label>
         <label>
-          <input type="radio" name="fatcontent" value="before30%"> до 30%
+          <input type="radio" name="fatcontent" value="before30%">до 30%
         </label>
         <label>
-          <input type="radio" name="fatcontent" value="before30%"> cвыше 30%
+          <input type="radio" name="fatcontent" value="before30%">cвыше 30%
         </label>
       </div>
       <label>Наполнители:</label>
-      <label for="fillers-chocolates">
-        <input type="checkbox" name="chocolates" id="fillers-chocolates" checked> шоколадные
+      <label>
+        <input type="checkbox" name="chocolates" id="fillers-chocolates" checked>шоколадные
       </label>
-      <label for="fillers-sugartopping">
-        <input type="checkbox" name="sugartopping" id="fillers-sugartopping" checked> сахарные присыпки
+      <label>
+        <input type="checkbox" name="sugartopping" id="fillers-sugartopping" checked>сахарные присыпки
       </label>
-      <label for="fillers-fruit">
-        <input type="checkbox" name="fruit" id="fillers-fruit"> фрукты
+      <label>
+        <input type="checkbox" name="fruit" id="fillers-fruit">фрукты
       </label>
-      <label for="fillers-syrups">
-        <input type="checkbox" name="syrups" id="fillers-syrups"> сироп
+      <label>
+        <input type="checkbox" name="syrups" id="fillers-syrups">сироп
       </label>
-      <label for="fillers-jams">
-        <input type="checkbox" name="jams" id="fillers-jams"> джем
+      <label>
+        <input type="checkbox" name="jams" id="fillers-jams">джем
       </label>
       <input type="submit" value="Применить">
     </form>
     <div class="products-catalog price-catalog">
-      <img src="img/1.png" width="200" height="200" alt=""> 310 Р/кг
-      <a href="#"> Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-      <img src="img/2.png" width="200" height="200" alt=""> 380 Р/кг
-      <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-      <img src="img/3.png" width="200" height="200" alt=""> 355 Р/кг
-      <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-      <img src="img/4.png" width="200" height="200" alt=""> 415 Р/кг
-      <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-      <img src="img/5.png" width="200" height="200" alt=""> 325 Р/кг
-      <a href="#">Сливочное с брусничным джемом</a>
-      <img src="img/6.png" width="200" height="200" alt=""> 410 Р/кг
-      <a href="#">Сливочно-черничное с цельными ягодами черники</a>
-      <img src="img/7.png" width="200" height="200" alt=""> 375 Р/кг
-      <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
-      <img src="img/8.png" width="200" height="200" alt=""> 320 Р/кг
-      <a href="#">Сливочное с шоколадной стружкой </a>
-      <img src="img/9.png" width="200" height="200" alt=""> 440 Р/кг
-      <a href="#">Сливочно-ванильное с кусочками шоколада</a>
-      <img src="img/10.png" width="200" height="200" alt=""> 435 Р/кг
-      <a href="#">Сливочное с ментоловым сиропом</a>
-      <img src="img/11.png" width="200" height="200" alt=""> 355 Р/кг
-      <a href="#">Сливочное с кусочками черного шоколада</a>
-      <img src="img/12.png" width="200" height="200" alt=""> 420 Р/кг
-      <a href="#">Сливочное с мятными сиропом</a>
+      <div class="product-orange">
+        <img src="img/1.png" width="200" height="200" alt="">310 Р/кг
+        <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-coffee">
+        <img src="img/2.png" width="200" height="200" alt="">380 Р/кг
+        <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-strawberry">
+        <img src="img/3.png" width="200" height="200" alt="">355 Р/кг
+        <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-Cremebrulee">
+        <img src="img/4.png" width="200" height="200" alt="">415 Р/кг
+        <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-lingonberry">
+        <img src="img/5.png" width="200" height="200" alt="">325 Р/кг
+        <a href="#">Сливочное с брусничным джемом</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-blueberry">
+        <img src="img/6.png" width="200" height="200" alt="">410 Р/кг
+        <a href="#">Сливочно-черничное с цельными ягодами черники</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-lemon">
+        <img src="img/7.png" width="200" height="200" alt="">375 Р/кг
+        <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-chocolate">
+        <img src="img/8.png" width="200" height="200" alt="">320 Р/кг
+        <a href="#">Сливочное с шоколадной стружкой</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-vanilla">
+        <img src="img/9.png" width="200" height="200" alt="">440 Р/кг
+        <a href="#">Сливочно-ванильное с кусочками шоколада</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-menthol">
+        <img src="img/10.png" width="200" height="200" alt="">435 Р/кг
+        <a href="#">Сливочное с ментоловым сиропом</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-chocoshavings">
+        <img src="img/11.png" width="200" height="200" alt="">355 Р/кг
+        <a href="#">Сливочное с кусочками черного шоколада</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
+      <div class="product-mint">
+        <img src="img/12.png" width="200" height="200" alt="">420 Р/кг
+        <a href="#">Сливочное с мятными сиропом</a>
+        <a href="#" class="btn btn-red">Быстрый просмотр</a>
+      </div>
     </div>
     <div class="paginator">
       <a class="prev" href="#prev">Назад</a>
