--- a/catalog.html
+++ b/catalog.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="important words">
   <meta name="description" content="about site">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -89,62 +90,62 @@
       <input type="submit" value="Применить">
     </form>
     <div class="products-catalog price-catalog">
-      <div class="product-orange">
+      <div class="product">
         <img src="img/1.png" width="200" height="200" alt="">310 Р/кг
         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-coffee">
+      <div class="product">
         <img src="img/2.png" width="200" height="200" alt="">380 Р/кг
         <a href="#">Сливочно-кофейное с кусочками шоколада</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-strawberry">
+      <div class="product">
         <img src="img/3.png" width="200" height="200" alt="">355 Р/кг
         <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-Cremebrulee">
+      <div class="product">
         <img src="img/4.png" width="200" height="200" alt="">415 Р/кг
         <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-lingonberry">
+      <div class="product">
         <img src="img/5.png" width="200" height="200" alt="">325 Р/кг
         <a href="#">Сливочное с брусничным джемом</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-blueberry">
+      <div class="product">
         <img src="img/6.png" width="200" height="200" alt="">410 Р/кг
         <a href="#">Сливочно-черничное с цельными ягодами черники</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-lemon">
+      <div class="product">
         <img src="img/7.png" width="200" height="200" alt="">375 Р/кг
         <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-chocolate">
+      <div class="product">
         <img src="img/8.png" width="200" height="200" alt="">320 Р/кг
         <a href="#">Сливочное с шоколадной стружкой</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-vanilla">
+      <div class="product">
         <img src="img/9.png" width="200" height="200" alt="">440 Р/кг
         <a href="#">Сливочно-ванильное с кусочками шоколада</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-menthol">
+      <div class="product">
         <img src="img/10.png" width="200" height="200" alt="">435 Р/кг
         <a href="#">Сливочное с ментоловым сиропом</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-chocoshavings">
+      <div class="product">
         <img src="img/11.png" width="200" height="200" alt="">355 Р/кг
         <a href="#">Сливочное с кусочками черного шоколада</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
-      <div class="product-mint">
+      <div class="product">
         <img src="img/12.png" width="200" height="200" alt="">420 Р/кг
         <a href="#">Сливочное с мятными сиропом</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
