--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="important words">
   <meta name="description" content="about site">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -73,19 +74,21 @@
             <div class="title-first">
               <img src="img/background-first.png" width="900" height="881" alt="">
               <h3>Крембрюле и пломбир с малиновым джемом</h3>
+              <a href="#" class="btn btn-red">Давайте оба!</a>
             </div>
             <div class="title-second">
               <img src="img/background-second.png" width="900" height="845" alt="">
               <h3>Шоколадный пломбир и лимонный сорбет</h3>
+              <a href="#" class="btn btn-red">Давайте оба!</a>
             </div>
             <div class="title-third">
               <img src="img/background-third.png" width="900" height="838" alt="">
               <h3>Пломбир с помадкой и клубничный щербет</h3>
+              <a href="#" class="btn btn-red">Давайте оба!</a>
             </div>
           </div>
         </div>
       </div>
-      <a href="#" class="btn btn-red">Давайте оба!</a>
     </div>
     <section class="features">
       <div class="features-raspberry">
@@ -99,19 +102,19 @@
         <a href="#" class="btn btn-red btn-features">Хочу шоколадки!</a>
       </div>
       <div class="products">
-        <div class="products-citrus icon">
+        <div class="product hit">
           <img src="img/1.png" width="200" height="200" alt="">310 P/кг
           <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         </div>
-        <div class="products-coffee icon">
+        <div class="product hit">
           <img src="img/2.png" width="200" height="200" alt="">380 Р/кг
           <a href="#">Сливочно-кофейное с кусочками шоколада</a>
         </div>
-        <div class="products-raspberry icon">
+        <div class="product hit">
           <img src="img/3.png" width="200" height="200" alt="">355 Р/кг
           <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
         </div>
-        <div class="products-сremebrulee icon">
+        <div class="product hit">
           <img src="img/4.png" width="200" height="200" alt="">415 Р/кг
           <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
         </div>
@@ -149,11 +152,9 @@
         <br>
         <strong>8 812 450-25-25</strong>
         <br> (c 10 до 20 ежедневно)
+        <input type="submit" value="Форма обратной связи" class="btn btn-red">
         <form action="/echo" method="post">
-          <input type="submit" value="Форма обратной связи" class="btn btn-red">
-        </form>
-        <form action="/echo" method="post">
-          <label>Мы обязательно вам ответим!</label>
+          <legend>Мы обязательно вам ответим!</legend>
           <label>
             <input type="text" placeholder="Как вас зовут?" required>
           </label>
@@ -175,15 +176,13 @@
         <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
       </div>
       <div class="footer-menu">
-        <a href="#" class=""><b>Для поставщиков</b></a>
-        <a href="#" class="">О производстве</a>
-        <a href="#" class="">Наши документы</a>
-        <a href="#" class="">Экологические стандарты</a>
-      </div>
-      <div class="footer-logo">
-        <a href="#"><img src="img/logo2.svg" width="108" height="37" alt=""></a>
+        <a href="#" class="icon"><b>Для поставщиков</b></a>
+        <a href="#">О производстве</a>
+        <a href="#">Наши документы</a>
+        <a href="#">Экологические стандарты</a>
       </div>
       <div class="footer-copyright">
+        <a href="#"><img src="img/logo2.svg" width="108" height="37" alt=""></a>
         Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
       </div>
     </div>
