--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="main-header">
-    <div class="container">
+    <div class="container clearfix">
       <div class="header-top">
         <div class="logo">
           <img src="img/Logo.svg" width="154" height="64" alt="">
@@ -72,17 +72,17 @@
         <div class="slider-inner">
           <div class="slider-slides">
             <div class="title-first">
-              <img src="img/background-first.png" width="900" height="881" alt="">
+              <img src="img/background-first.png" width="1045" height="881" alt="">
               <h3>Крембрюле и пломбир с малиновым джемом</h3>
               <a href="#" class="btn btn-red">Давайте оба!</a>
             </div>
             <div class="title-second">
-              <img src="img/background-second.png" width="900" height="845" alt="">
+              <img src="img/background-second.png" width="1046" height="845" alt="">
               <h3>Шоколадный пломбир и лимонный сорбет</h3>
               <a href="#" class="btn btn-red">Давайте оба!</a>
             </div>
             <div class="title-third">
-              <img src="img/background-third.png" width="900" height="838" alt="">
+              <img src="img/background-third.png" width="1046" height="838" alt="">
               <h3>Пломбир с помадкой и клубничный щербет</h3>
               <a href="#" class="btn btn-red">Давайте оба!</a>
             </div>
@@ -103,25 +103,25 @@
       </div>
       <div class="products">
         <div class="product hit">
-          <img src="img/1.png" width="200" height="200" alt="">310 P/кг
+          <img src="img/1.png" width="267" height="267" alt="">310 P/кг
           <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         </div>
         <div class="product hit">
-          <img src="img/2.png" width="200" height="200" alt="">380 Р/кг
+          <img src="img/2.png" width="267" height="267" alt="">380 Р/кг
           <a href="#">Сливочно-кофейное с кусочками шоколада</a>
         </div>
         <div class="product hit">
-          <img src="img/3.png" width="200" height="200" alt="">355 Р/кг
+          <img src="img/3.png" width="267" height="267" alt="">355 Р/кг
           <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
         </div>
         <div class="product hit">
-          <img src="img/4.png" width="200" height="200" alt="">415 Р/кг
+          <img src="img/4.png" width="267" height="267" alt="">415 Р/кг
           <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
         </div>
       </div>
     </section>
     <section class="advantages">
-      <h1 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного мороженного собственного производства на развес</h1>
+      <h1 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного собственного производства на развес</h1>
       <ul>
         <li class="own-icecream">Все изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий</li>
         <li class="farm">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают долговременное сотрудничество </li>
@@ -133,7 +133,7 @@
       <div class="news">Новое в нашем блоге</div>
       <article>
         <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
-        <img src="img/backgroundarticle.png" width="420" height="220" alt="">
+        <img src="img/backgroundarticle.png" width="560" height="220" alt="">
       </article>
       <div class="subscription">
         Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не слать всякой ненужной ерунды. Честно=)
