Слайдер. Графика.Сетка.
Добавлен слайдер. Исправлена графика. Исправлена Сетка.

--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,7 @@
   <meta name="description" content="about site">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:700,900,500&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
     <div class="container">
       <div class="header-top">
         <div class="logo">
-          <a href="index.html"><img src="img/Logo.svg" width="154" height="64" alt=""></a>
+          <a href="index.html"><img src="img/logo-gllacy.svg" width="154" height="64" alt=""></a>
         </div>
         <nav class="main-navigation">
           <ul>
@@ -89,64 +90,64 @@
       </label>
       <input type="submit" value="Применить">
     </form>
-    <div class="products-catalog price-catalog">
+    <div class="products price">
       <div class="product">
-        <img src="img/1.png" width="267" height="267" alt="">310 Р/кг
+        <img src="img/icecream-orange-jam.png" width="267" height="267" alt="">310 Р/кг
         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/2.png" width="267" height="267" alt="">380 Р/кг
+        <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt="">380 Р/кг
         <a href="#">Сливочно-кофейное с кусочками шоколада</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/3.png" width="267" height="267" alt="">355 Р/кг
+        <img src="img/icecream-white-chocolate.png" width="267" height="267" alt="">355 Р/кг
         <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/4.png" width="267" height="267" alt="">415 Р/кг
+        <img src="img/icecream-creme-brulee.png" width="267" height="267" alt="">415 Р/кг
         <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/5.png" width="267" height="267" alt="">325 Р/кг
+        <img src="img/icecream-lingonberry-jam.png" width="267" height="267" alt="">325 Р/кг
         <a href="#">Сливочное с брусничным джемом</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/6.png" width="267" height="267" alt="">410 Р/кг
+        <img src="img/icecream-blueberries.png" width="267" height="267" alt="">410 Р/кг
         <a href="#">Сливочно-черничное с цельными ягодами черники</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/7.png" width="267" height="267" alt="">375 Р/кг
+        <img src="img/icecream-lemon-candy.png" width="267" height="267" alt="">375 Р/кг
         <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/8.png" width="267" height="267" alt="">320 Р/кг
+        <img src="img/icecream-chocolate-chips.png" width="267" height="267" alt="">320 Р/кг
         <a href="#">Сливочное с шоколадной стружкой</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/9.png" width="267" height="267" alt="">440 Р/кг
+        <img src="img/icecream-vanilla-chocolate-chips.png" width="267" height="267" alt="">440 Р/кг
         <a href="#">Сливочно-ванильное с кусочками шоколада</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/10.png" width="267" height="267" alt="">435 Р/кг
+        <img src="img/icecream-menthol-syrup.png" width="267" height="267" alt="">435 Р/кг
         <a href="#">Сливочное с ментоловым сиропом</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/11.png" width="267" height="267" alt="">355 Р/кг
+        <img src="img/icecream-pieces-dark-chocolate.png" width="267" height="267" alt="">355 Р/кг
         <a href="#">Сливочное с кусочками черного шоколада</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
       <div class="product">
-        <img src="img/12.png" width="267" height="267" alt="">420 Р/кг
+        <img src="img/icecream-mint-syrup.png" width="267" height="267" alt="">420 Р/кг
         <a href="#">Сливочное с мятными сиропом</a>
         <a href="#" class="btn btn-red">Быстрый просмотр</a>
       </div>
@@ -176,7 +177,7 @@
         <a href="#" class="">Экологические стандарты</a>
       </div>
       <div class="footer-logo">
-        <a href="#"><img src="img/logo2.svg" width="108" height="37" alt=""></a>
+        <a href="#"><img src="img/logo-ha.svg" width="108" height="37" alt=""></a>
       </div>
       <div class="footer-copyright">
         Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
