--- a/index.html
+++ b/index.html
@@ -8,185 +8,183 @@
   <meta name="description" content="about site">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:700,900,500&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <header class="main-header">
-    <div class="container clearfix">
-      <div class="header-top">
-        <div class="logo">
-          <img src="img/Logo.svg" width="154" height="64" alt="">
-        </div>
-        <nav class="main-navigation">
-          <ul>
-            <li><a href="#">Каталог</a>
-              <ul class="catalog-navigation">
-                <li><a href="#">Новинки</a></li>
-                <li><a href="catalog.html">Сливочное</a></li>
-                <li><a href="#">Щербеты</a></li>
-                <li><a href="#">Фруктовый лед</a></li>
-                <li><a href="#">Мелорин</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Доставка и оплата</a></li>
-            <li><a href="#">О компании</a></li>
-          </ul>
-        </nav>
-        <a class="search" href="#"></a>
-        <form class="" action="/echo" method="post">
-          <label>
-            <input type="search" name="search" placeholder="Что ищем?">
-          </label>
-        </form>
-        <a class="login" href="#">Вход</a>
-        <form class="" action="/echo" method="post">
-          <label>
-            <input type="email" placeholder="Электронная почта" required>
-          </label>
-          <label>
-            <input type="password" name="password" placeholder="Пароль" required>
-          </label>
-          <input type="submit" value="Войти" class="btn btn-red">
-          <a href="#">Забыли пароль?</a>
-          <a href="#">Новая регистрация</a>
-        </form>
-        <a class="basket" href="#">Корзина</a>
-        <div class="contacts">
-          C 10 до 20 ежедневно
-          <br> 8 812 450-25-25
+  <input type="radio" id="btn-1" name="toggle" checked>
+  <input type="radio" id="btn-2" name="toggle">
+  <input type="radio" id="btn-3" name="toggle">
+  <div class="site-wrapper">
+    <header class="main-header">
+      <div class="container clearfix">
+        <div class="header-top">
+          <div class="logo">
+            <img src="img/logo-gllacy.svg" width="154" height="64" alt="">
+          </div>
+          <nav class="main-navigation">
+            <ul>
+              <li><a href="#">Каталог</a>
+                <ul class="catalog-navigation">
+                  <li><a href="#">Новинки</a></li>
+                  <li><a href="catalog.html">Сливочное</a></li>
+                  <li><a href="#">Щербеты</a></li>
+                  <li><a href="#">Фруктовый лед</a></li>
+                  <li><a href="#">Мелорин</a></li>
+                </ul>
+              </li>
+              <li><a href="#">Доставка и оплата</a></li>
+              <li><a href="#">О компании</a></li>
+            </ul>
+          </nav>
+          <a class="search" href="#"></a>
+          <form class="" action="/echo" method="post">
+            <label>
+              <input type="search" name="search" placeholder="Что ищем?">
+            </label>
+          </form>
+          <a class="login" href="#">Вход</a>
+          <form class="" action="/echo" method="post">
+            <label>
+              <input type="email" placeholder="Электронная почта" required>
+            </label>
+            <label>
+              <input type="password" name="password" placeholder="Пароль" required>
+            </label>
+            <input type="submit" value="Войти" class="btn btn-red">
+            <a href="#">Забыли пароль?</a>
+            <a href="#">Новая регистрация</a>
+          </form>
+          <a class="basket" href="#">Корзина</a>
+          <div class="contacts">
+            C 10 до 20 ежедневно
+            <br> 8 812 450-25-25
+          </div>
         </div>
       </div>
-    </div>
-  </header>
-  <main class="container">
-    <div class="promo">
-      <div class="promo-slider">
-        <input type="radio" id="btn-1" name="toggle" checked>
-        <input type="radio" id="btn-2" name="toggle">
-        <input type="radio" id="btn-3" name="toggle">
-        <div class="slider-controls">
-          <label for="btn-1"></label>
-          <label for="btn-2"></label>
-          <label for="btn-3"></label>
-        </div>
-        <div class="slider-inner">
-          <div class="slider-slides">
-            <div class="title-first">
-              <img src="img/background-first.png" width="1045" height="881" alt="">
-              <h3>Крембрюле и пломбир с малиновым джемом</h3>
-              <a href="#" class="btn btn-red">Давайте оба!</a>
+    </header>
+    <main class="container">
+      <div class="promo">
+        <div class="promo-slider">
+          <div class="slider">
+            <div class="slide" id="slide1">
+              <div class="slide-title">Крембрюле и пломбир с малиновым джемом</div>
+              <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
             </div>
-            <div class="title-second">
-              <img src="img/background-second.png" width="1046" height="845" alt="">
-              <h3>Шоколадный пломбир и лимонный сорбет</h3>
-              <a href="#" class="btn btn-red">Давайте оба!</a>
+            <div class="slide" id="slide2">
+              <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
+              <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
             </div>
-            <div class="title-third">
-              <img src="img/background-third.png" width="1046" height="838" alt="">
-              <h3>Пломбир с помадкой и клубничный щербет</h3>
-              <a href="#" class="btn btn-red">Давайте оба!</a>
+            <div class="slide" id="slide3">
+              <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
+              <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
+            </div>
+            <div class="slider-controls">
+              <label for="btn-1"></label>
+              <label for="btn-2"></label>
+              <label for="btn-3"></label>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <section class="features">
-      <div class="features-raspberry">
-        <h3>Малинка даром!</h3>
-        <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-        <a href="#" class="btn btn-red btn-features">Хочу варенье!</a>
-      </div>
-      <div class="features-chocolate">
-        <h3>Шоколадки даром!</h3>
-        <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <a href="#" class="btn btn-red btn-features">Хочу шоколадки!</a>
-      </div>
-      <div class="products">
-        <div class="product hit">
-          <img src="img/1.png" width="267" height="267" alt="">310 P/кг
-          <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+      <section class="features clearfix">
+        <div class="features-raspberry">
+          <h3>Малинка даром!</h3>
+          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+          <a href="#" class="btn btn-red btn-features">Хочу варенье!</a>
         </div>
-        <div class="product hit">
-          <img src="img/2.png" width="267" height="267" alt="">380 Р/кг
-          <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+        <div class="features-chocolate">
+          <h3>Шоколадки даром!</h3>
+          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+          <a href="#" class="btn btn-red btn-features">Хочу шоколадки!</a>
         </div>
-        <div class="product hit">
-          <img src="img/3.png" width="267" height="267" alt="">355 Р/кг
-          <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+        <div class="products">
+          <div class="product hit">
+            <img src="img/icecream-orange-jam.png" width="267" height="267" alt="">310 P/кг
+            <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          </div>
+          <div class="product hit">
+            <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt="">380 Р/кг
+            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+          </div>
+          <div class="product hit">
+            <img src="img/icecream-white-chocolate.png" width="267" height="267" alt="">355 Р/кг
+            <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          </div>
+          <div class="product hit">
+            <img src="img/icecream-creme-brulee.png" width="267" height="267" alt="">415 Р/кг
+            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+          </div>
         </div>
-        <div class="product hit">
-          <img src="img/4.png" width="267" height="267" alt="">415 Р/кг
-          <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+      </section>
+      <section class="advantages clearfix">
+        <h1 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного собственного производства на развес</h1>
+        <ul class="clearfix">
+          <li class="own-icecream">Все изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий</li>
+          <li class="farm">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают долговременное сотрудничество </li>
+          <li class="ecologically">Для приготовления мороженного используется настояшие сливки и молоко высочайшего качества. Все дополнительные ингридиенты добавки произведены из натурального экологически чистого сырья.</li>
+          <li class="temperature">Доставка нашего мороженного до заказчиков осуществляется в специальной термоупаковке, которая не дает мороженному растаять в пути и позволяет ему сохранить свой превосходный вкус.</li>
+        </ul>
+      </section>
+      <div class="news-subscription clearfix">
+        <div class="news">Новое в нашем блоге</div>
+        <article>
+          <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
+          <img src="img/bg-strawberry.jpg" width="560" height="220" alt="">
+        </article>
+        <div class="subscription clearfix">
+          Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не слать всякой ненужной ерунды. Честно=)
+          <form action="/echo" method="post">
+            <input type="email" placeholder="Электронная почта" required>
+            <input type="submit" class="btn btn-red btn-subscription">
+          </form>
         </div>
       </div>
-    </section>
-    <section class="advantages">
-      <h1 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного собственного производства на развес</h1>
-      <ul>
-        <li class="own-icecream">Все изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий</li>
-        <li class="farm">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают долговременное сотрудничество </li>
-        <li class="ecologically">Для приготовления мороженного используется настояшие сливки и молоко высочайшего качества. Все дополнительные ингридиенты добавки произведены из натурального экологически чистого сырья.</li>
-        <li class="temperature">Доставка нашего мороженного до заказчиков осуществляется в специальной термоупаковке, которая не дает мороженному растаять в пути и позволяет ему сохранить свой превосходный вкус.</li>
-      </ul>
-    </section>
-    <div class="news-subscription">
-      <div class="news">Новое в нашем блоге</div>
-      <article>
-        <a href="#">10 способов сервировки фруктовых щербетов к столу</a>
-        <img src="img/backgroundarticle.png" width="560" height="220" alt="">
-      </article>
-      <div class="subscription">
-        Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не слать всякой ненужной ерунды. Честно=)
-        <form action="/echo" method="post">
-          <input type="email" placeholder="Электронная почта" required>
-          <input type="submit" class="btn btn-red btn-subscription">
-        </form>
+      <div class="map clearfix">
+        <div class="address">
+          Адресс нашего офиса и
+          <br> офлайн магазина
+          <br>
+          <strong>ул.Большая Конюшенная<br>19/8, Санкт-Петербург<br></strong> Для заказов по телефону:
+          <br>
+          <strong>8 812 450-25-25</strong>
+          <br> (c 10 до 20 ежедневно)
+          <a href="#" class="btn btn-red">Форма обратной связи</a>
+          <form action="/echo" method="post">
+            <legend>Мы обязательно вам ответим!</legend>
+            <label>
+              <input type="text" placeholder="Как вас зовут?" required>
+            </label>
+            <label>
+              <input type="email" placeholder="Ваша почта для ответа?" required>
+            </label>
+            <textarea rows="" cols="" placeholder="Напишите что-нибудь..."></textarea>
+            <input type="submit" class="btn btn-red" value="Отправить">
+          </form>
+        </div>
       </div>
-    </div>
-    <div class="map">
-      <div class="address">
-        Адресс нашего офиса и
-        <br> офлайн магазина
-        <br>
-        <strong>ул.Большая Конюшенная<br>19/8, Санкт-Петербург<br></strong> Для заказов по телефону:
-        <br>
-        <strong>8 812 450-25-25</strong>
-        <br> (c 10 до 20 ежедневно)
-        <input type="submit" value="Форма обратной связи" class="btn btn-red">
-        <form action="/echo" method="post">
-          <legend>Мы обязательно вам ответим!</legend>
-          <label>
-            <input type="text" placeholder="Как вас зовут?" required>
-          </label>
-          <label>
-            <input type="email" placeholder="Ваша почта для ответа?" required>
-          </label>
-          <textarea rows="" cols="" placeholder="Напишите что-нибудь..."></textarea>
-          <input type="submit" class="btn btn-red" value="Отправить">
-        </form>
+    </main>
+    <footer class="main-footer clearfix">
+      <div class="container">
+        <div class="footer-social">
+          <a href="#" class="social-btn social-btn-tw">Твиттер</a>
+          <a href="#" class="social-btn social-btn-in">Инстаграмм</a>
+          <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
+          <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
+        </div>
+        <div class="footer-menu">
+          <a href="#" class="icon"><b>Для поставщиков</b></a>
+          <a href="#">О производстве</a>
+          <a href="#">Наши документы</a>
+          <a href="#">Экологические стандарты</a>
+        </div>
+        <div class="footer-copyright">
+          <a href="#"><img src="img/logo-ha.svg" width="108" height="37" alt=""></a>
+          Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
+        </div>
       </div>
-    </div>
-  </main>
-  <footer class="main-footer">
-    <div class="container">
-      <div class="footer-social">
-        <a href="#" class="social-btn social-btn-tw">Твиттер</a>
-        <a href="#" class="social-btn social-btn-in">Инстаграмм</a>
-        <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
-        <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
-      </div>
-      <div class="footer-menu">
-        <a href="#" class="icon"><b>Для поставщиков</b></a>
-        <a href="#">О производстве</a>
-        <a href="#">Наши документы</a>
-        <a href="#">Экологические стандарты</a>
-      </div>
-      <div class="footer-copyright">
-        <a href="#"><img src="img/logo2.svg" width="108" height="37" alt=""></a>
-        Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
-      </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
 </body>
 
 </html>
